removed unneeded components and updated the footer

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -9,6 +9,9 @@
             <li><a href="#" target="_blank"><fa-icon [icon]="faSkype"></fa-icon></a></li>
         </ul>
     </div>
+    <h6 class="mt-2" style="color: #fff;">All photos have been licensed from <a href="https://stock.adobe.com"
+            style="color: #fff; text-decoration: underline;">Adobe Stock</a>. They retain their unique
+        photo ID in their file name.</h6>
 </footer>
 
 <app-back-to-top />
