removed unneeded components

--- a/src/app/common/back-to-top/back-to-top.component.html
+++ b/src/app/common/back-to-top/back-to-top.component.html
@@ -1,7 +1,3 @@
-<div
-    class="back-to-top position-fixed rounded-circle text-center d-block"
-    (click)="scrollToTop()"
-    *ngIf="isShow"
->
-    <i class="fa-solid fa-chevron-up"></i>
+<div class="back-to-top position-fixed rounded-circle text-center d-block" (click)="scrollToTop()" *ngIf="isShow">
+    <fa-icon [icon]="fasChevronUp"></fa-icon>
 </div>
