--- a/src/app/lodging/lodging.component.html
+++ b/src/app/lodging/lodging.component.html
@@ -76,12 +76,12 @@
 <div class="elements-area pt-100 pb-75">
     <div class="container">
         <div class="section-title">
-            <h2><span>Hostiles</span></h2>
+            <h2><span>Hostels</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.</p>
         </div>
         <div class="row justify-content-center">
-            <div *ngFor="let element of hostiles" class="col-lg-4 col-md-6">
+            <div *ngFor="let element of hostels" class="col-lg-4 col-md-6">
                 <div class="single-element">
                     <div class="element-img">
                         <img [src]="element.imageUrl" alt="element-img" height="240px">
